--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
+    "chart.js": "^4.4.3",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.2",
     "tslib": "^2.3.0",
